# jackpotsol

./: .env.example  Anchor.toml  Cargo.toml  package-lock.json  package.json  readme.md  tsconfig.json
programs/lottery_pot/: Cargo.toml
programs/lottery_pot/src/: lib.rs
tests/: lottery_pot.ts
